tests/integration/commands/export/06_parallelization_sdoc_parsing_problem_in_child_process/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input1.sdoc.
CHECK: TextXSyntaxError: None:1:1: error: Expected '[DOCUMENT]' at position {{.*}}input1.sdoc:(1, 1) => '*THIS DOCUM'.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
